# infobuddy

./: .env  .gitignore  README.md  app.py  ingest.py  memory.py  plaincb.py  pyproject.toml  requirements.txt  reranker.py
datastore_db_new/b1e4efdf-10d8-4178-a0be-490dd93e7cc9/: index_metadata.pickle
