[project]
name = "infobuddy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "deep-translator>=1.11.4",
    "fastapi>=0.136.3",
    "fitz>=0.0.1.dev2",
    "flagembedding>=1.4.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.2",
    "langserve>=0.3.3",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-sdk>=1.42.1",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.5.1",
    "spacy>=3.8.14",
    "streamlit>=1.58.0",
    "transformers>=5.10.1",
    "uvicorn>=0.48.0",
]
